[tool.poetry]
name = "decred"
version = "0.1.0"
description = ""
authors = ["Nicola 'tekNico' Larosa <github@teknico.net>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.3"
base58 = "^2.0.0"
blake256 = "^0.1.1"
pynacl = "^1.3.0"
websocket_client = "^0.57.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyflakes = "^2.1.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
