[tool.poetry]
name = "decred"
version = "0.1.0"
description = "A Python 3 Decred toolkit."
license = "ISC"
homepage = "https://decred.org/"
repository = "https://github.com/decred/tinydecred/"
documentation = "https://github.com/decred/tinydecred/blob/master/decred"
authors = [
    "Brian Stafford <buck@decred.org>",
    "The Decred developers <https://decred.org/community>"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
appdirs = "^1.4.3"
base58 = "^2.0.0"
blake256 = "^0.1.1"
pynacl = "^1.3.0"
websocket_client = "^0.57.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-pudb = "^0.7.0"
flake8 = "^3.7"
black = "^19.10b0"
isort = "^4.3"
websocket-server = "^0.4"
pytest-benchmark = "^3.2.3"
pytest-profiling = "^1.7.0"
Cython = "^0.29.16"

[tool.isort]
atomic = "true"
combine_as_imports = "true"
combine_star = "true"
filter_files = "true"
force_grid_wrap = 0
force_sort_within_sections = "true"
include_trailing_comma = "true"
line_length = 88
lines_after_imports = 2
multi_line_output = 3
use_parentheses = "true"
virtual_env = "./.venv/"
skip = [
    "./examples/create_testnet_wallet.py",
    "./examples/send_testnet.py"
]

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
