[tool.poetry]
name = "tinywallet"
version = "0.1.0"
description = "A Python 3 Decred wallet."
license = "ISC"
homepage = "https://decred.org/"
repository = "https://github.com/decred/tinydecred/"
authors = [
    "Brian Stafford <https://github.com/buck54321>",
    "The Decred developers <https://decred.org/community>"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Office/Business :: Financial"
]

[tool.poetry.dependencies]
python = "^3.7"
decred = {path = "../decred/"}
pyqt5 = "=5.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyflakes = "^2.1.1"
black = "^19.10b0"

[tool.poetry.scripts]
tinywallet = "tinywallet.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
