[tool.poetry]
name = "tinywallet"
version = "0.0.1"
description = "A Python 3 Decred wallet."
license = "ISC"
homepage = "https://decred.org/"
repository = "https://github.com/decred/tinydecred/"
documentation = "https://github.com/decred/tinydecred/blob/master/tinywallet"
authors = [
    "Brian Stafford <buck@decred.org>",
    "The Decred developers <https://decred.org/community>"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial"
]

[tool.poetry.dependencies]
python = "^3.6, <3.9"
decred = {path = "../decred/"}
pyside2 = "^5.14.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
Cython = "^0.29.16"

[tool.poetry.scripts]
tinywallet = "tinywallet.app:main"

[tool.isort]
atomic = "true"
combine_as_imports = "true"
combine_star = "true"
filter_files = "true"
force_grid_wrap = 0
force_sort_within_sections = "true"
include_trailing_comma = "true"
line_length = 88
lines_after_imports = 2
multi_line_output = 3
use_parentheses = "true"
virtual_env = "./.venv/"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
